[tool.poetry]
name = "hypothesis-jsonschema-unfit"
version = "0.1.0"
description = ""
authors = ["Dmitry Dygalo <dadygalo@kiwi.com>"]
readme = "README.rst"
repository = "https://github.com/kiwicom/hypothesis-jsonschema-unfit"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
hypothesis_jsonschema = ">=0.9.13,<1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[tool.black]
line-length = 120
target_version = ["py37"]

[tool.isort]
# config compatible with Black
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "hypothesis_jsonschema_unfit"
known_third_party = ["hypothesis", "hypothesis_jsonschema", "hypothesis_jsonschema_unfit", "jsonschema", "pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
